--- a/login.html
+++ b/login.html
@@ -5,18 +5,13 @@
   <title>Login | Finance Point</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
-
+    * { box-sizing: border-box; margin: 0; padding: 0; }
     body, html {
-      height: 100%;
       font-family: 'Segoe UI', sans-serif;
-      background-color: #0d0d0d;
-      overflow: hidden;
+      background: #0d0d0d;
       color: white;
+      height: 100%;
+      overflow: hidden;
     }
 
     #particles-js {
@@ -27,31 +22,31 @@
     }
 
     .container {
+      min-height: 100vh;
       display: flex;
-      justify-content: center;
       align-items: center;
-      height: 100vh;
+      justify-content: center;
       padding: 20px;
     }
 
     .login-box {
       background: rgba(0, 0, 0, 0.85);
-      padding: 40px 30px;
+      padding: 30px;
       border-radius: 16px;
       width: 100%;
-      max-width: 350px;
+      max-width: 400px;
+      box-shadow: 0 0 20px rgba(255, 215, 0, 0.2);
       text-align: center;
-      box-shadow: 0 0 30px rgba(255, 215, 0, 0.15);
     }
 
-    .login-box h2 {
+    h2 {
       color: gold;
-      font-size: 26px;
-      margin-bottom: 10px;
+      margin-bottom: 15px;
+      font-size: 24px;
       position: relative;
     }
 
-    .login-box h2::after {
+    h2::after {
       content: '';
       position: absolute;
       width: 60px;
@@ -65,14 +60,12 @@
     input {
       width: 100%;
       padding: 12px;
-      margin: 15px 0;
+      margin: 10px 0;
       border: none;
       border-radius: 6px;
       background: #1a1a1a;
       color: white;
       font-size: 14px;
-      outline: none;
-      transition: 0.3s;
     }
 
     input:focus {
@@ -89,18 +82,25 @@
       cursor: pointer;
       width: 100%;
       font-weight: bold;
-      transition: background 0.3s;
+      margin-top: 10px;
     }
 
     .btn:hover {
       background: #ffd700d0;
     }
 
-    .error-message {
-      color: red;
+    .message {
       font-size: 14px;
-      margin-top: 12px;
+      margin-top: 15px;
       min-height: 20px;
+    }
+
+    .message.success {
+      color: #00ff99;
+    }
+
+    .message.error {
+      color: red;
     }
 
     .signup-link {
@@ -123,27 +123,30 @@
 
   <div class="container">
     <div class="login-box">
-      <h2>Sign In</h2>
-      <input type="email" id="email" placeholder="Enter your email" />
-      <input type="password" id="password" placeholder="Enter your password" />
+      <h2>Login to Finance Point</h2>
+      <input type="email" id="email" placeholder="Email Address" />
+      <input type="password" id="password" placeholder="Password" />
       <button class="btn" onclick="login()">Login</button>
-      <div class="error-message" id="errorMsg"></div>
+
+      <div id="messageBox" class="message"></div>
 
       <div class="signup-link">
-        Don't have an account? <a href="signup.html">Create one</a>
+        Don't have an account? <a href="signup.html">Sign Up</a>
       </div>
     </div>
   </div>
 
-  <!-- Firebase (Non-module Version to Ensure Compatibility) -->
+  <!-- Firebase -->
   <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-auth-compat.js"></script>
   <script>
     const firebaseConfig = {
-      apiKey: "YOUR_API_KEY",
-      authDomain: "YOUR_AUTH_DOMAIN",
-      projectId: "YOUR_PROJECT_ID",
-      appId: "YOUR_APP_ID"
+      apiKey: "AIzaSyCH5H1FWEcHmQiCQhoc6GE8GhizqhTZoQc",
+      authDomain: "finsa-connect.firebaseapp.com",
+      projectId: "finsa-connect",
+      storageBucket: "finsa-connect.firebasestorage.app",
+      messagingSenderId: "126845965255",
+      appId: "1:126845965255:web:c82539297a8464873d7fe2"
     };
 
     firebase.initializeApp(firebaseConfig);
@@ -152,50 +155,64 @@
     function login() {
       const email = document.getElementById("email").value.trim();
       const password = document.getElementById("password").value.trim();
-      const errorMsg = document.getElementById("errorMsg");
+      const messageBox = document.getElementById("messageBox");
 
       if (!email || !password) {
-        errorMsg.textContent = "Please enter both email and password.";
+        messageBox.textContent = "Please fill in both fields.";
+        messageBox.className = "message error";
         return;
       }
 
       auth.signInWithEmailAndPassword(email, password)
-        .then(() => {
-          window.location.href = "dashboard.html";
+        .then((userCredential) => {
+          const user = userCredential.user;
+
+          if (!user.emailVerified) {
+            auth.signOut(); // prevent access
+            messageBox.textContent = "Please verify your email before logging in.";
+            messageBox.className = "message error";
+          } else {
+            messageBox.textContent = "Login successful!";
+            messageBox.className = "message success";
+            setTimeout(() => {
+              window.location.href = "dashboard.html";
+            }, 1000);
+          }
         })
         .catch((error) => {
-          let message = "Login failed.";
-          if (error.code === "auth/user-not-found") message = "Email not found.";
-          else if (error.code === "auth/wrong-password") message = "Incorrect password.";
-          else if (error.code === "auth/invalid-email") message = "Invalid email.";
-          errorMsg.textContent = message;
+          let msg = "Login failed.";
+          if (error.code === "auth/wrong-password") msg = "Incorrect password.";
+          else if (error.code === "auth/user-not-found") msg = "No account found with this email.";
+          else if (error.code === "auth/invalid-email") msg = "Invalid email format.";
+          messageBox.textContent = msg;
+          messageBox.className = "message error";
         });
     }
   </script>
 
-  <!-- Particles Background -->
+  <!-- Particles.js Background -->
   <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
   <script>
     particlesJS("particles-js", {
-      "particles": {
-        "number": { "value": 70 },
-        "color": { "value": "#ffffff" },
-        "shape": { "type": "circle" },
-        "opacity": { "value": 0.5 },
-        "size": { "value": 2 },
-        "line_linked": {
-          "enable": true,
-          "distance": 120,
-          "color": "#ffffff",
-          "opacity": 0.4,
-          "width": 1
+      particles: {
+        number: { value: 60 },
+        color: { value: "#ffffff" },
+        shape: { type: "circle" },
+        opacity: { value: 0.5 },
+        size: { value: 2 },
+        line_linked: {
+          enable: true,
+          distance: 120,
+          color: "#ffffff",
+          opacity: 0.4,
+          width: 1
         },
-        "move": { "enable": true, "speed": 1 }
+        move: { enable: true, speed: 1 }
       },
-      "interactivity": {
-        "detect_on": "canvas",
-        "events": {
-          "onhover": { "enable": true, "mode": "grab" }
+      interactivity: {
+        detect_on: "canvas",
+        events: {
+          onhover: { enable: true, mode: "grab" }
         }
       }
     });
