--- a/dashboard.html
+++ b/dashboard.html
@@ -1,245 +1,227 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Dashboard | Finance Point</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="UTF-8">
+  <title>Finance Point Dashboard</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/css2?family=Segoe+UI:wght@400;600&display=swap" rel="stylesheet">
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
+    * { margin: 0; padding: 0; box-sizing: border-box; }
 
-    body, html {
+    body {
       font-family: 'Segoe UI', sans-serif;
       background: #0d0d0d;
       color: white;
-      height: 100%;
+      display: flex;
+      min-height: 100vh;
       overflow-x: hidden;
     }
 
-    #particles-js {
+    .sidebar {
+      width: 220px;
+      background: #111;
+      padding: 30px 20px;
       position: fixed;
-      width: 100%;
       height: 100%;
-      z-index: -1;
+      border-right: 1px solid gold;
     }
 
-    header {
-      text-align: center;
-      background: rgba(0, 0, 0, 0.85);
-      padding: 20px;
-      font-size: 26px;
-      font-weight: bold;
+    .sidebar h1 {
       color: gold;
-      border-bottom: 2px solid gold;
-      box-shadow: 0 2px 10px rgba(255, 215, 0, 0.2);
+      font-size: 20px;
+      margin-bottom: 40px;
+      text-align: center;
+      letter-spacing: 1px;
     }
 
-    nav {
-      width: 230px;
-      height: 100vh;
-      background: linear-gradient(to bottom, #111, #000);
-      position: fixed;
-      top: 72px;
-      left: 0;
-      padding-top: 20px;
-      border-right: 2px solid gold;
-      box-shadow: 3px 0 10px rgba(255, 215, 0, 0.1);
-    }
-
-    nav a {
+    .sidebar a {
       display: block;
       color: white;
-      padding: 14px 25px;
       text-decoration: none;
-      border-bottom: 1px solid #222;
+      padding: 12px;
+      margin-bottom: 10px;
+      border-left: 3px solid transparent;
       transition: 0.3s;
     }
 
-    nav a:hover {
+    .sidebar a:hover {
+      background: #1c1c1c;
+      border-left: 3px solid gold;
+    }
+
+    .main {
+      margin-left: 220px;
+      padding: 30px 20px;
+      flex: 1;
+    }
+
+    .topbar {
+      display: none;
+      background: #111;
+      padding: 15px 20px;
+      border-bottom: 1px solid gold;
+    }
+
+    .topbar h2 {
+      color: gold;
+      font-size: 18px;
+    }
+
+    .section {
+      background: #1a1a1a;
+      padding: 20px;
+      border-radius: 10px;
+      margin-bottom: 25px;
+      box-shadow: 0 0 10px rgba(255, 215, 0, 0.05);
+    }
+
+    .section h3 {
+      color: gold;
+      margin-bottom: 15px;
+      font-size: 18px;
+    }
+
+    .stats {
+      display: flex;
+      gap: 20px;
+      flex-wrap: wrap;
+    }
+
+    .stat-box {
+      flex: 1;
+      background: #0d0d0d;
+      border: 1px solid gold;
+      border-radius: 8px;
+      padding: 15px;
+      text-align: center;
+      min-width: 120px;
+    }
+
+    .stat-box h4 {
+      color: gold;
+      font-size: 16px;
+      margin-bottom: 5px;
+    }
+
+    .stat-box p {
+      font-size: 20px;
+      font-weight: bold;
+    }
+
+    .quick-links {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+    }
+
+    .quick-links a {
+      flex: 1 1 45%;
+      background: #0d0d0d;
+      padding: 12px;
+      text-align: center;
+      text-decoration: none;
+      color: white;
+      border: 1px solid gold;
+      border-radius: 6px;
+      transition: 0.3s;
+    }
+
+    .quick-links a:hover {
       background: gold;
       color: black;
-      font-weight: bold;
-    }
-
-    #logoutBtn {
-      display: block;
-      margin: 30px 20px 0;
-      padding: 12px;
-      background: crimson;
-      color: white;
-      text-align: center;
-      border-radius: 6px;
-      text-decoration: none;
-      font-weight: bold;
-    }
-
-    main {
-      margin-left: 230px;
-      padding: 40px 30px;
-    }
-
-    .user-info {
-      font-size: 18px;
-      margin-bottom: 20px;
-      color: #ccc;
-      text-align: center;
-    }
-
-    section {
-      background: rgba(255, 215, 0, 0.05);
-      padding: 25px;
-      border-left: 4px solid gold;
-      margin-bottom: 30px;
-      border-radius: 12px;
-      box-shadow: 0 0 8px rgba(255, 215, 0, 0.1);
-    }
-
-    h2 {
-      margin-bottom: 10px;
-      color: gold;
-      font-size: 22px;
-      border-bottom: 1px solid gold;
-      padding-bottom: 5px;
     }
 
     @media (max-width: 768px) {
-      nav {
-        width: 100%;
-        height: auto;
-        position: relative;
-        display: flex;
-        overflow-x: auto;
-        top: 0;
+      .sidebar {
+        display: none;
       }
 
-      nav a {
-        flex: 1;
-        text-align: center;
-        border-bottom: none;
-        border-right: 1px solid #222;
-      }
-
-      main {
+      .main {
         margin-left: 0;
-        padding: 20px;
+        padding-top: 60px;
       }
 
-      #logoutBtn {
-        margin: 10px auto;
-        width: 90%;
+      .topbar {
+        display: block;
+        position: fixed;
+        width: 100%;
+        top: 0;
+        left: 0;
+        z-index: 1000;
       }
     }
   </style>
 </head>
 <body>
-  <div id="particles-js"></div>
 
-  <header id="greeting">Finance Point Dashboard</header>
+  <!-- Sidebar Navigation -->
+  <div class="sidebar">
+    <h1>Finance Point</h1>
+    <a href="#">Dashboard</a>
+    <a href="announcements.html">Announcements</a>
+    <a href="events.html">Events</a>
+    <a href="downloads.html">Study Materials</a>
+    <a href="lostfound.html">Lost & Found</a>
+    <a href="birthdays.html">Birthday Wall</a>
+    <a href="quiz.html">Quiz of the Week</a>
+    <a href="feedback.html">Feedback</a>
+    <a href="admin.html">Admin Panel</a>
+  </div>
 
-  <nav>
-    <a href="dashboard.html">🏠 Dashboard</a>
-    <a href="events.html">📅 Events</a>
-    <a href="announcements.html">📢 Announcements</a>
-    <a href="quiz.html">🧠 Quiz</a>
-    <a href="downloads.html">📥 Resources</a>
-    <a href="birthdays.html">🎉 Birthdays</a>
-    <a href="lostfound.html">🔍 Lost & Found</a>
-    <a id="logoutBtn" href="#">🚪 Logout</a>
-  </nav>
+  <!-- Mobile Topbar -->
+  <div class="topbar">
+    <h2>Finance Point</h2>
+  </div>
 
-  <main>
-    <div class="user-info" id="userInfo">Loading student info...</div>
+  <!-- Main Dashboard -->
+  <div class="main">
+    <div class="section">
+      <h3>Welcome, OBA Ayuba (300 Level)</h3>
+      <p>You're logged in as a student of the Department of Banking & Finance.</p>
+    </div>
 
-    <section>
-      <h2>📢 Latest Announcements</h2>
-      <p>🗓️ Departmental Congress – Thursday, 12PM at the main hall. Be punctual!</p>
-    </section>
+    <div class="section stats">
+      <div class="stat-box">
+        <h4>Students</h4>
+        <p>532</p>
+      </div>
+      <div class="stat-box">
+        <h4>Announcements</h4>
+        <p>12</p>
+      </div>
+      <div class="stat-box">
+        <h4>Events</h4>
+        <p>5</p>
+      </div>
+      <div class="stat-box">
+        <h4>Downloads</h4>
+        <p>38</p>
+      </div>
+    </div>
 
-    <section>
-      <h2>📅 Upcoming Events</h2>
-      <p>🎓 Finance Night holds July 20th – Dress code: Corporate Royalty 👑</p>
-    </section>
+    <div class="section">
+      <h3>Latest Announcements</h3>
+      <ul>
+        <li>⚠️ Departmental CBT test holds Friday by 10am</li>
+        <li>📝 Seminar registration deadline extended to July 10th</li>
+      </ul>
+    </div>
 
-    <section>
-      <h2>💸 Finance Tip</h2>
-      <p>“Wealth is built by discipline, not desire.” – AAUA Finance Alumni</p>
-    </section>
-  </main>
+    <div class="section">
+      <h3>Finance Tip of the Day</h3>
+      <p>"Financial literacy is not a luxury — it's a necessity."</p>
+    </div>
 
-  <!-- Firebase -->
-  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-auth-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore-compat.js"></script>
-  <script>
-    const firebaseConfig = {
-      apiKey: "AIzaSyCH5H1FWEcHmQiCQhoc6GE8GhizqhTZoQc",
-      authDomain: "finsa-connect.firebaseapp.com",
-      projectId: "finsa-connect",
-      storageBucket: "finsa-connect.firebasestorage.app",
-      messagingSenderId: "126845965255",
-      appId: "1:126845965255:web:c82539297a8464873d7fe2"
-    };
+    <div class="section">
+      <h3>Quick Access</h3>
+      <div class="quick-links">
+        <a href="downloads.html">Study Materials</a>
+        <a href="lostfound.html">Lost & Found</a>
+        <a href="quiz.html">CBT Quiz</a>
+        <a href="birthdays.html">Birthday Wall</a>
+      </div>
+    </div>
+  </div>
 
-    firebase.initializeApp(firebaseConfig);
-    const auth = firebase.auth();
-    const db = firebase.firestore();
-
-    auth.onAuthStateChanged(user => {
-      if (!user) {
-        window.location.href = "login.html";
-      } else {
-        const uid = user.uid;
-        db.collection("users").doc(uid).get().then(doc => {
-          if (doc.exists) {
-            const data = doc.data();
-            const name = data.name || "Finance Royal";
-            const matric = data.matric || "Unknown";
-
-            document.getElementById("greeting").textContent = `Hi, ${name}`;
-            document.getElementById("userInfo").textContent = `Matric Number: ${matric}`;
-          } else {
-            document.getElementById("userInfo").textContent = "Student record not found.";
-          }
-        });
-      }
-    });
-
-    document.getElementById("logoutBtn").addEventListener("click", () => {
-      auth.signOut().then(() => {
-        window.location.href = "login.html";
-      });
-    });
-  </script>
-
-  <!-- Particles Background -->
-  <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
-  <script>
-    particlesJS("particles-js", {
-      particles: {
-        number: { value: 60 },
-        color: { value: "#ffffff" },
-        shape: { type: "circle" },
-        opacity: { value: 0.5 },
-        size: { value: 2 },
-        line_linked: {
-          enable: true,
-          distance: 120,
-          color: "#ffffff",
-          opacity: 0.4,
-          width: 1
-        },
-        move: { enable: true, speed: 1 }
-      },
-      interactivity: {
-        detect_on: "canvas",
-        events: {
-          onhover: { enable: true, mode: "grab" }
-        }
-      }
-    });
-  </script>
 </body>
 </html>
