--- a/dashboard.html
+++ b/dashboard.html
@@ -1,16 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>Finance Point Dashboard</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Segoe+UI:wght@400;600&display=swap" rel="stylesheet">
   <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
+    * { box-sizing: border-box; padding: 0; margin: 0; }
     body {
       font-family: 'Segoe UI', sans-serif;
       background: #0d0d0d;
-      color: white;
+      color: #fff;
       display: flex;
       min-height: 100vh;
       overflow-x: hidden;
@@ -73,29 +72,33 @@
       color: gold;
       border-bottom: 2px solid gold;
     }
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 20px;
+    }
+    .card {
+      background: #1a1a1a;
+      border: 1px solid gold;
+      border-radius: 10px;
+      padding: 20px;
+      text-align: center;
+    }
+    .card h4 {
+      color: gold;
+      margin-bottom: 10px;
+    }
+    .card p {
+      font-size: 18px;
+      font-weight: bold;
+    }
     .section {
       background: #1a1a1a;
       padding: 20px;
       border-radius: 10px;
-      margin-bottom: 25px;
+      margin: 25px 0;
     }
     .section h3 { color: gold; margin-bottom: 15px; font-size: 18px; }
-    .stats {
-      display: flex;
-      gap: 20px;
-      flex-wrap: wrap;
-    }
-    .stat-box {
-      flex: 1;
-      background: #0d0d0d;
-      border: 1px solid gold;
-      border-radius: 8px;
-      padding: 15px;
-      text-align: center;
-      min-width: 120px;
-    }
-    .stat-box h4 { color: gold; font-size: 16px; margin-bottom: 5px; }
-    .stat-box p { font-size: 20px; font-weight: bold; }
     .quick-links {
       display: flex;
       flex-wrap: wrap;
@@ -112,6 +115,22 @@
       border-radius: 6px;
     }
     .quick-links a:hover { background: gold; color: black; }
+    .logout-btn {
+      display: inline-block;
+      background: linear-gradient(145deg, #d40000, #ff4d4d);
+      color: white;
+      border: none;
+      border-radius: 8px;
+      padding: 12px 20px;
+      font-size: 16px;
+      cursor: pointer;
+      margin-top: 20px;
+      transition: all 0.3s ease;
+    }
+    .logout-btn:hover {
+      background: linear-gradient(145deg, #ff4d4d, #d40000);
+      transform: scale(1.05);
+    }
     @media (max-width: 768px) {
       .sidebar { display: none; }
       .main { margin-left: 0; padding-top: 60px; }
@@ -133,81 +152,65 @@
     <a href="feedback.html">Feedback</a>
     <a href="admin.html">Admin Panel</a>
     <a href="#" id="logoutBtn" style="margin-top: 40px; color: red; border-left: 3px solid red;">Sign Out</a>
-  </div>
-
-  <div class="topbar">
+  </div>  <div class="topbar">
     <h2>Finance Point</h2>
-  </div>
-
-  <div class="mobile-nav">
+  </div>  <div class="mobile-nav">
     <a href="dashboard.html">Dashboard</a>
     <a href="announcements.html">Announcements</a>
     <a href="downloads.html">Study Materials</a>
     <a href="admin.html">Admin Panel</a>
     <a href="#" id="mobileLogout">Sign Out</a>
-  </div>
-
-  <div class="main">
+  </div>  <div class="main">
     <div class="section">
       <h3 id="userName">Welcome...</h3>
       <p id="userMatric"></p>
-    </div>
-
-    <div class="section stats">
-      <div class="stat-box">
-        <h4>Students</h4>
-        <p id="studentsCount">...</p>
-      </div>
-      <div class="stat-box">
-        <h4>Announcements</h4>
-        <p id="announcementsCount">...</p>
-      </div>
-      <div class="stat-box">
-        <h4>Events</h4>
-        <p id="eventsCount">...</p>
-      </div>
-      <div class="stat-box">
-        <h4>Downloads</h4>
-        <p id="downloadsCount">...</p>
-      </div>
-    </div>
-
-    <div class="section">
-      <h3>Latest Announcements</h3>
-      <ul>
-        <li>CBT test holds Friday by 10am</li>
-        <li>Seminar registration deadline extended</li>
-      </ul>
-    </div>
-
-    <div class="section">
-      <h3>Finance Tip of the Day</h3>
-      <p>"Financial literacy is not a luxury — it's a necessity."</p>
-    </div>
-
-    <div class="section">
-      <h3>Quick Access</h3>
-      <div class="quick-links">
-        <a href="downloads.html">Study Materials</a>
-        <a href="lostfound.html">Lost & Found</a>
-        <a href="quiz.html">CBT Quiz</a>
-        <a href="birthdays.html">Birthday Wall</a>
-      </div>
-    </div>
-
-    <!-- Sign Out Button (Under Stats) -->
-    <div class="section">
-      <button id="logoutBtn2" style="background: red; color: white; padding: 10px 20px; border-radius: 8px; font-size: 16px; width: 100%;">Sign Out</button>
-    </div>
+    </div><div class="grid">
+  <div class="card">
+    <h4>Students</h4>
+    <p id="studentsCount">...</p>
   </div>
+  <div class="card">
+    <h4>Announcements</h4>
+    <p id="announcementsCount">...</p>
+  </div>
+  <div class="card">
+    <h4>Events</h4>
+    <p id="eventsCount">...</p>
+  </div>
+  <div class="card">
+    <h4>Downloads</h4>
+    <p id="downloadsCount">...</p>
+  </div>
+</div>
 
-  <!-- Firebase SDKs -->
-  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-auth-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore-compat.js"></script>
+<div class="section">
+  <h3>Latest Announcements</h3>
+  <ul>
+    <li>CBT test holds Friday by 10am</li>
+    <li>Seminar registration deadline extended</li>
+  </ul>
+</div>
 
-  <!-- Firebase Config + Logic -->
-  <script>
+<div class="section">
+  <h3>Finance Tip of the Day</h3>
+  <p>"Financial literacy is not a luxury — it's a necessity."</p>
+</div>
+
+<div class="section">
+  <h3>Quick Access</h3>
+  <div class="quick-links">
+    <a href="downloads.html">Study Materials</a>
+    <a href="lostfound.html">Lost & Found</a>
+    <a href="quiz.html">CBT Quiz</a>
+    <a href="birthdays.html">Birthday Wall</a>
+  </div>
+</div>
+
+<div class="section" style="text-align: center;">
+  <button class="logout-btn" id="logoutBtn2">Sign Out of Finance Point</button>
+</div>
+
+  </div>  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app-compat.js"></script>  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-auth-compat.js"></script>  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore-compat.js"></script>  <script>
     const firebaseConfig = {
       apiKey: "AIzaSyCH5H1FWEcHmQiCQhoc6GE8GhizqhTZoQc",
       authDomain: "finsa-connect.firebaseapp.com",
@@ -254,7 +257,6 @@
       }
     });
 
-    // Sign out buttons
     document.getElementById("logoutBtn").addEventListener("click", () => {
       auth.signOut().then(() => {
         window.location.href = "login.html";
@@ -272,6 +274,5 @@
         window.location.href = "login.html";
       });
     });
-  </script>
-</body>
+  </script></body>
 </html>
